# gouda-bot

./: .windsurfrules  CHANGELOG.md  README.md  bot.py  config.py  database.py  pyproject.toml
.devcontainer/: devcontainer.json
cogs/: admin_commands.py  ai_handler.py
tests/: test_config.py  test_database.py
